Add complete MLOps deployment with React frontend
- Add FastAPI backend with comprehensive ML model support
- Add React frontend with neural network shader UI
- Include 6 ML models: Linear, Softmax, MLP, SVM, KNN-L1, KNN-L2, GRU-SVM
- Add model comparison and hyperparameter tuning features
- Add real-time prediction interface with visualizations
- Update notebooks with latest research work
- Add comprehensive documentation and setup guides

--- a/.gitignore
+++ b/.gitignore
@@ -82,3 +82,10 @@ mlops_deployment/models/*.joblib
 # Keep config files
 !mlops_deployment/config.yaml
 
+# Frontend
+modular_ml_pipeline/frontend/node_modules/
+modular_ml_pipeline/frontend/dist/
+modular_ml_pipeline/frontend/.vite/
+modular_ml_pipeline/frontend/build/
+*.log
+
